booking-state-validation.txt

> demac-corporation@1.0.0 typecheck
> tsc --noEmit

src/screens/AgendaScreen.tsx(1109,4): error TS1005: '}' expected.

> demac-corporation@1.0.0 build:web
> expo export --platform web

Starting Metro Bundler

Web Bundling failed 9446ms index.ts (244 modules)

SyntaxError: SyntaxError: /home/runner/work/demac-corporation/demac-corporation/src/screens/AgendaScreen.tsx: Unexpected token (1109:3)

[0m [90m 1107 |[39m   summaryLine[33m:[39m { color[33m:[39m colors[33m.[39mmuted[33m,[39m fontSize[33m:[39m [35m10[39m[33m,[39m marginTop[33m:[39m [35m3[39m }[33m,[39m
 [90m 1108 |[39m   modalActions[33m:[39m { flexDirection[33m:[39m [32m'row'[39m[33m,[39m justifyContent[33m:[39m [32m'flex-end'[39m[33m,[39m gap[33m:[39m [35m10[39m[33m,[39m marginTop[33m:[39m [35m15[39m[33m,[39m flexWrap[33m:[39m [32m'wrap'[39m }[33m,[39m
[31m[1m>[22m[39m[90m 1109 |[39m })[33m;[39m
 [90m      |[39m    [31m[1m^[22m[39m[0m

TYPECHECK_EXIT=2
BUILD_EXIT=1
NODE_EXIT=0
